# Lattice

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
.github/: FUNDING.yml
.github/workflows/: ci.yml  publish.yml
benchmarks/datasets/: replay_traces.jsonl
benchmarks/evals/: __init__.py  catalog.py  cli.py  live.py  replay.py  report.py  runner.py  surfaces.py
benchmarks/framework/: types.py
benchmarks/metrics/: quality.py
benchmarks/scenarios/: prompts.py
deploy/: prometheus.yml
docs/: index.md
docs/compression/: caching.md  protocol.md  transforms.md
docs/concepts/: architecture.md  observability.md  proxy.md  safety.md  sdk.md  sig-rats-psg-milv.md
docs/evaluation/: benchmarks.md
docs/getting-started/: cli.md  installation.md  quickstart.md
docs/novel/: batching-speculation.md  binary-framing.md  delta-encoding.md  streaming.md  tacc.md
docs/operations/: integrations.md
docs/providers/: providers.md
scripts/: benchmark_compression.py  benchmark_e2e_through_proxy.py  profile_format_conv.py  test_e2e_real.py
src/lattice/: __init__.py  _compat.py  _version.py  cli.py  client.py  ui.py
src/lattice/core/: __init__.py  agent_stats.py  auto_continuation.py  batch_accumulator.py  config.py  context.py  cost_estimator.py  credentials.py  delta_wire.py  errors.py  guardrails.py  maintenance.py  metrics.py  pipeline.py  pipeline_factory.py  policy.py  result.py  scheduler.py  semantic_cache.py  semantic_graph.py  serialization.py  session.py  store.py  task_classifier.py  telemetry.py  transform_registry.py  transport.py  tunnel_sidecar.py
src/lattice/gateway/: __init__.py  compat.py  detect_helpers.py  routing.py  server.py
src/lattice/integrations/: __init__.py  agents.py  init.py  lace.py  mcp.py  mutation_store.py  registry.py
src/lattice/integrations/claude/: install.py  runtime.py
src/lattice/integrations/codex/: adapter.py  auth.py  install.py  runtime.py  ws_handler.py
src/lattice/integrations/copilot/: install.py  runtime.py
src/lattice/integrations/cursor/: install.py  runtime.py
src/lattice/integrations/opencode/: install.py  runtime.py
src/lattice/protocol/: __init__.py  boundaries.py  cache_planner.py  content.py  dictionary_codec.py  dictionary_static.py  framing.py  manifest.py  multiplex.py  reliability.py  resume.py  segments.py
src/lattice/providers/: __init__.py  anthropic.py  azure.py  base.py  bedrock.py  capabilities.py  gemini.py  mcp_to_anthropic.py  ollama.py  openai.py  openai_compatible.py  schema_filter.py  stall_detector.py  stream_state.py  tool_sanitizer.py  transport.py
src/lattice/proxy/: __init__.py  bootstrap.py  compat_exports.py  health.py  lifecycle.py  routes.py  server.py
src/lattice/runtime/: __init__.py  router.py
src/lattice/sdk/: __init__.py  client.py  proxy_client.py  wrappers.py
src/lattice/state/: __init__.py  segment_store.py
src/lattice/transforms/: __init__.py  batching.py  cache_arbitrage.py  content_profiler.py  context_selector.py  delta_encode.py  dictionary_compress.py  format_conv.py  grammar_compress.py  hierarchical_summary.py  message_dedup.py  output_cleanup.py  prefix_opt.py  rate_distortion.py  reference_sub.py  runtime_contract.py  self_information.py  speculative.py  strategy_selector.py  structural_fingerprint.py  tool_filter.py
src/lattice/transport/: __init__.py  congestion.py  simulation.py
src/lattice/utils/: __init__.py  patterns.py  streaming_sketches.py  token_count.py  validation.py
tests/e2e/: test_agent_wrappers.py
tests/integration/: test_end_to_end.py  test_full_flow.py  test_proxy.py  test_proxy_sessions.py  test_redis_store_integration.py  test_session_correctness.py
tests/security/: test_security.py
tests/unit/: test_agent_stats.py  test_agents.py  test_anthropic_advanced.py  test_anthropic_v2.py  test_auto_continuation.py  test_batch_accumulator.py  test_batching.py  test_benchmark_framework.py  test_binary_framing.py  test_boundaries.py  test_cache_arbitrage.py  test_cache_telemetry.py  test_canonical_session_compiler.py  test_compression_mode.py  test_config.py  test_context_selector.py  test_cost_estimator.py  test_cross_surface_consistency.py  test_delta_encode.py  test_delta_wire.py  test_dictionary_compress.py  test_dictionary_wire.py  test_downgrade_telemetry.py  test_eval_surfaces.py  test_fallback_visibility.py  test_flow_e2e.py  test_format_conv.py  test_framing_extensions.py  test_gateway.py  test_grammar_compress.py  test_maintenance.py  test_mcp_to_anthropic.py  test_metrics.py  test_multiplex.py  test_mutation_store.py  test_pipeline_factory.py  test_policy.py  test_production_evals.py  test_protocol.py  test_provider_capabilities.py  (+39 more)
tests/unit/core/: test_result.py
tests/unit/providers/: test_providers.py
