[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lattice-transport"
version = "0.1.0"
description = "LLM Transport & Efficiency Layer — make LLM calls cheaper, faster, and smarter"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Harsh Daga"}
]
keywords = [
    "llm", "compression", "transport", "proxy", "tokens",
    "optimization", "openai", "anthropic", "batching", "latency",
    "context", "prompt", "cache", "sdk", "api"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: Proxy Servers",
    "Typing :: Typed",
]
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.3.0",
    "tiktoken>=0.7.0",
    "structlog>=24.4.0",
    "anyio>=4.4.0",
    "uvicorn[standard]>=0.30.0",
    "prometheus-client>=0.20.0",
    "pyyaml>=6.0",
    "tomli>=2.0.0;python_version<'3.11'",
    "typing-extensions>=4.12.0",
    "rich>=13.7.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
redis = [
    "redis>=5.0.0",
]
mcp = [
    "mcp>=1.0.0",
]
all = [
    "lattice-transport[redis,mcp]"
]

[project.scripts]
lattice = "lattice.cli:main"

[project.urls]
Homepage = "https://github.com/Harsh-Daga/lattice"
Documentation = "https://github.com/Harsh-Daga/lattice#readme"
Repository = "https://github.com/Harsh-Daga/lattice"
Issues = "https://github.com/Harsh-Daga/lattice/issues"
Changelog = "https://github.com/Harsh-Daga/lattice/releases"

[tool.hatch.build.targets.wheel]
packages = ["src/lattice"]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pre-commit>=3.8.0",
    "respx>=0.21.0",
    "fakeredis>=2.26.0",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # Pyflakes
    "I",  # isort
    "N",  # pep8-naming
    "W",  # pycodestyle warnings
    "UP", # pyupgrade
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "SIM",# flake8-simplify
    "ARG",# flake8-unused-arguments
    "PTH",# flake8-use-pathlib
]
ignore = ["E501"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["tiktoken.*", "mcp.*", "tomllib", "tomli", "psutil", "redis.*", "redis"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-v --tb=short"
pythonpath = ["."]

[tool.coverage.run]
source = ["src/lattice"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]
